--- a/BookstoreAPI/BookstoreAPI.csproj
+++ b/BookstoreAPI/BookstoreAPI.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.2" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Npgsql" Version="8.0.2" />
     <PackageReference Include="System.Text.Json" Version="8.0.2" />
   </ItemGroup>
 
