--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 .DS_Store
 node_modules
 /dist
-/bookPhoto/*
-/authorPhoto/*
-/publisherPhoto/*
+**/bookPhoto/*
+**/authorPhoto/*
+**/publisherPhoto/*
 
 
 # local env files
