--- a/book_store_front/package.json
+++ b/book_store_front/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^3.2.0",
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
     "moment": "^2.30.1",
+    "stripe": "^14.23.0",
     "vue": "^3.2.13",
     "vue-router": "^4.3.0"
   },
