add BookRequest and update payment in front

--- a/BookstoreAPI/BookstoreAPI.csproj
+++ b/BookstoreAPI/BookstoreAPI.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>efb37b07-b715-4519-ab61-93adfee41d6c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
