add choice by genres

--- a/BookstoreAPI/Properties/launchSettings.json
+++ b/BookstoreAPI/Properties/launchSettings.json
@@ -23,7 +23,7 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "",
       "applicationUrl": "http://localhost:5224",
       "environmentVariables": {
@@ -32,7 +32,7 @@
     },
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
